--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,8 +4,6 @@ target 'PickyPodWed_Example' do
   pod 'PickyPodWed', :path => '../'
 
   target 'PickyPodWed_Tests' do
-    inherit! :search_paths
-
-    pod 'FBSnapshotTestCase'
+    pod 'PickyPodWed', :path => '../'
   end
 end
